package it.polimi.ingsw.network.server;

import java.util.logging.Logger;

/**
 * Server class used to log messages.
 */
public class Server {

    public static final Logger LOGGER = Logger.getLogger(Server.class.getName());

}